plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.json:json:20231013'
    implementation 'com.github.docker-java:docker-java:3.3.6'
    implementation 'com.github.docker-java:docker-java-transport-httpclient5:3.3.6'
    implementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'
    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.0'
    implementation group: 'org.jfree', name: 'jfreechart', version: '1.5.2'
}

tasks.named('test') {
    //for windows build, since it can't handle the docker container like linux
    ignoreFailures = true
    //for linux comment the above line, and uncomment the below line
    //useJUnitPlatform()
}
